fix header horizontal scroll

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,6 @@
 .header {
   max-height: 100vh;
   background-color: $default-dark;
-  width: 100vw;
   &__inner {
     width: 100%;
     top: 0;
